--- a/MoodTracker/Base.lproj/Main.storyboard
+++ b/MoodTracker/Base.lproj/Main.storyboard
@@ -53,7 +53,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s9G-LE-z8J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1374" y="700"/>
+            <point key="canvasLocation" x="-859" y="680"/>
         </scene>
         <!--Comment View Controller-->
         <scene sceneID="pV1-pJ-G0g">
@@ -412,6 +412,85 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EtP-Yz-G0A" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2388.4057971014495" y="679.6875"/>
+        </scene>
+        <!--Edit Comment View Controller-->
+        <scene sceneID="zlY-B1-tvZ">
+            <objects>
+                <viewController storyboardIdentifier="EditCommentVC" useStoryboardIdentifierAsRestorationIdentifier="YES" id="yoj-Vm-Jgd" customClass="EditCommentViewController" customModule="MoodTracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mSy-fl-9hK">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edit Comment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RoY-E2-MQV">
+                                <rect key="frame" x="121" y="44" width="172" height="34"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WRb-h9-goa">
+                                <rect key="frame" x="16" y="98" width="382" height="250"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="pCi-QY-c0c"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9f8-oV-4Kf">
+                                <rect key="frame" x="304" y="368" width="90" height="40"/>
+                                <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="Wek-WT-Wxk"/>
+                                    <constraint firstAttribute="height" constant="40" id="bKQ-jt-uF2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Update">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="updateBtnPressed:" destination="yoj-Vm-Jgd" eventType="touchUpInside" id="Auy-At-yY0"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Efv-t7-XIv">
+                                <rect key="frame" x="20" y="368" width="120" height="40"/>
+                                <color key="backgroundColor" red="0.81423470514074803" green="0.81423470514074803" blue="0.81423470514074803" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="SIV-su-vKL"/>
+                                    <constraint firstAttribute="height" constant="40" id="bpf-54-PyG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Clear Text">
+                                    <color key="titleColor" red="0.1872082107244871" green="0.18712629656144578" blue="0.45481043781725883" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                                <connections>
+                                    <action selector="clearTextBtnPressed:" destination="yoj-Vm-Jgd" eventType="touchUpInside" id="ePl-8z-Aqr"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.87706613540649414" green="0.92292499542236328" blue="0.94365382194519043" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="bL8-t4-gm9" firstAttribute="trailing" secondItem="WRb-h9-goa" secondAttribute="trailing" constant="16" id="4Rn-d1-3K3"/>
+                            <constraint firstItem="WRb-h9-goa" firstAttribute="centerX" secondItem="mSy-fl-9hK" secondAttribute="centerX" id="BJt-rH-cOs"/>
+                            <constraint firstItem="RoY-E2-MQV" firstAttribute="top" secondItem="bL8-t4-gm9" secondAttribute="top" id="Bor-St-zTf"/>
+                            <constraint firstItem="RoY-E2-MQV" firstAttribute="centerX" secondItem="mSy-fl-9hK" secondAttribute="centerX" id="PaL-FY-MME"/>
+                            <constraint firstItem="Efv-t7-XIv" firstAttribute="top" secondItem="WRb-h9-goa" secondAttribute="bottom" constant="20" id="UMo-0K-rhK"/>
+                            <constraint firstItem="bL8-t4-gm9" firstAttribute="trailing" secondItem="9f8-oV-4Kf" secondAttribute="trailing" constant="20" id="a6O-yw-aWf"/>
+                            <constraint firstItem="WRb-h9-goa" firstAttribute="leading" secondItem="bL8-t4-gm9" secondAttribute="leading" constant="16" id="gBj-d7-UCk"/>
+                            <constraint firstItem="9f8-oV-4Kf" firstAttribute="top" secondItem="WRb-h9-goa" secondAttribute="bottom" constant="20" id="p7D-uu-AXo"/>
+                            <constraint firstItem="WRb-h9-goa" firstAttribute="top" secondItem="RoY-E2-MQV" secondAttribute="bottom" constant="20" id="qTn-1N-joO"/>
+                            <constraint firstItem="Efv-t7-XIv" firstAttribute="leading" secondItem="bL8-t4-gm9" secondAttribute="leading" constant="20" id="sT6-sI-0TN"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="bL8-t4-gm9"/>
+                    </view>
+                    <connections>
+                        <outlet property="commentTextView" destination="WRb-h9-goa" id="7ci-hX-36N"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oHP-9Y-w5V" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1639" y="680"/>
         </scene>
         <!--Select Theme-->
         <scene sceneID="KUJ-fj-Z1a">
