--- a/MoodTracker/Base.lproj/Main.storyboard
+++ b/MoodTracker/Base.lproj/Main.storyboard
@@ -15,6 +15,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c3b-6O-QPG">
+                                <rect key="frame" x="163.66666666666666" y="320" width="86.666666666666657" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="0.35294117650000001" green="0.31764705879999999" blue="0.90980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Bdn-Ac-I0d">
                                 <rect key="frame" x="0.0" y="56" width="414" height="552"/>
                             </imageView>
@@ -38,7 +44,9 @@
                             <constraint firstItem="zez-Hq-3mo" firstAttribute="trailing" secondItem="Wsw-lh-ZGQ" secondAttribute="trailing" constant="40" id="4He-hb-k6j"/>
                             <constraint firstItem="Wsw-lh-ZGQ" firstAttribute="top" secondItem="Bdn-Ac-I0d" secondAttribute="bottom" constant="51" id="5X9-tB-hvw"/>
                             <constraint firstItem="Bdn-Ac-I0d" firstAttribute="top" secondItem="zez-Hq-3mo" secondAttribute="top" id="6sX-Tl-dhw"/>
+                            <constraint firstItem="c3b-6O-QPG" firstAttribute="centerX" secondItem="sKI-Rw-wCv" secondAttribute="centerX" id="Gmr-zx-oqb"/>
                             <constraint firstItem="zez-Hq-3mo" firstAttribute="bottom" secondItem="Bdn-Ac-I0d" secondAttribute="bottom" constant="200" id="OfJ-sd-4Si"/>
+                            <constraint firstItem="c3b-6O-QPG" firstAttribute="centerY" secondItem="Bdn-Ac-I0d" secondAttribute="centerY" id="SHb-b1-FIr"/>
                             <constraint firstItem="Bdn-Ac-I0d" firstAttribute="leading" secondItem="zez-Hq-3mo" secondAttribute="leading" id="Uke-Oy-ixB"/>
                             <constraint firstItem="zez-Hq-3mo" firstAttribute="trailing" secondItem="Bdn-Ac-I0d" secondAttribute="trailing" id="VYe-Ss-oUv"/>
                         </constraints>
@@ -65,7 +73,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What made you feel this way today?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LXQ-sK-Nmz">
                                 <rect key="frame" x="69.666666666666657" y="96" width="274.66666666666674" height="48"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.3529411764705882" green="0.31764705882352939" blue="0.90980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="eaO-XG-rQs">
@@ -145,8 +153,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FGi-kv-6wK">
+                                <rect key="frame" x="12" y="476" width="390" height="100"/>
+                                <color key="backgroundColor" red="0.77963423580000002" green="0.93784716089999998" blue="0.94118612999999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="grR-3Z-Mry"/>
+                                </constraints>
+                            </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="2Mh-sd-whS">
-                                <rect key="frame" x="20" y="496" width="374" height="80"/>
+                                <rect key="frame" x="20" y="486" width="374" height="80"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="-7" translatesAutoresizingMaskIntoConstraints="NO" id="hXb-MF-RJd" userLabel="Angry">
                                         <rect key="frame" x="0.0" y="0.0" width="62.333333333333336" height="80"/>
@@ -288,23 +303,28 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today's Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lgy-6D-XXI">
-                                <rect key="frame" x="151" y="265" width="112" height="24"/>
+                                <rect key="frame" x="151" y="262" width="112" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
+                                <size key="shadowOffset" width="0.0" height="1"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.58823529411764708" green="0.92549019607843142" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="FGi-kv-6wK" firstAttribute="leading" secondItem="fu2-kr-YQ2" secondAttribute="leading" constant="12" id="1FZ-fd-eMN"/>
+                            <constraint firstItem="FGi-kv-6wK" firstAttribute="centerX" secondItem="lPl-TK-Jch" secondAttribute="centerX" id="2OF-mg-a9f"/>
                             <constraint firstItem="lgy-6D-XXI" firstAttribute="centerX" secondItem="lPl-TK-Jch" secondAttribute="centerX" id="5Ow-xa-dKQ"/>
-                            <constraint firstItem="2Mh-sd-whS" firstAttribute="top" secondItem="kbJ-za-5s9" secondAttribute="bottom" constant="60" id="DJP-69-0fJ"/>
+                            <constraint firstItem="2Mh-sd-whS" firstAttribute="top" secondItem="kbJ-za-5s9" secondAttribute="bottom" constant="50" id="9cu-sh-1Dh"/>
+                            <constraint firstItem="FGi-kv-6wK" firstAttribute="centerY" secondItem="2Mh-sd-whS" secondAttribute="centerY" id="9wl-K6-pb9"/>
+                            <constraint firstItem="kbJ-za-5s9" firstAttribute="top" secondItem="lgy-6D-XXI" secondAttribute="bottom" constant="-150" id="D4i-4e-9dn"/>
                             <constraint firstItem="2Mh-sd-whS" firstAttribute="leading" secondItem="lPl-TK-Jch" secondAttribute="leading" constant="20" id="I0s-8S-eEM"/>
                             <constraint firstItem="2Mh-sd-whS" firstAttribute="centerX" secondItem="lPl-TK-Jch" secondAttribute="centerX" id="Js4-SS-Wbu"/>
                             <constraint firstItem="fu2-kr-YQ2" firstAttribute="trailing" secondItem="kbJ-za-5s9" secondAttribute="trailing" constant="30" id="QLx-lg-fNB"/>
-                            <constraint firstItem="kbJ-za-5s9" firstAttribute="top" secondItem="lgy-6D-XXI" secondAttribute="bottom" constant="-153" id="THx-cc-Hcm"/>
                             <constraint firstAttribute="trailing" secondItem="2Mh-sd-whS" secondAttribute="trailing" constant="20" id="U8y-2F-wl7"/>
                             <constraint firstItem="kbJ-za-5s9" firstAttribute="leading" secondItem="fu2-kr-YQ2" secondAttribute="leading" constant="30" id="Zhk-5l-LAr"/>
                             <constraint firstItem="kbJ-za-5s9" firstAttribute="top" secondItem="fu2-kr-YQ2" secondAttribute="top" constant="80" id="mpy-Jp-IaO"/>
+                            <constraint firstItem="fu2-kr-YQ2" firstAttribute="trailing" secondItem="FGi-kv-6wK" secondAttribute="trailing" constant="12" id="ueb-3W-rFT"/>
                             <constraint firstItem="kbJ-za-5s9" firstAttribute="centerX" secondItem="lPl-TK-Jch" secondAttribute="centerX" id="vHF-F4-RWi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fu2-kr-YQ2"/>
@@ -344,7 +364,7 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="6kP-Ec-Es6">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.58823529409999997" green="0.92549019610000005" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="MoodCell" rowHeight="64" id="4bb-IH-jVE" customClass="MoodTableViewCell" customModule="MoodTracker" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="64"/>
@@ -419,9 +439,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edit Comment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RoY-E2-MQV">
-                                <rect key="frame" x="121" y="44" width="172" height="34"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="117.00000000000001" y="44" width="180.33333333333337" height="34"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
+                                <color key="textColor" red="0.35294117650000001" green="0.31764705879999999" blue="0.90980392160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WRb-h9-goa">
